# CheckLang

./: .gitignore  CMakeLists.txt
intrinsics/: object_instance.cpp  object_instance.h  object_method.cpp  object_method.h  object_property.cpp  object_property.h  object_prototype.cpp  object_prototype.h
structures/: collection.h  linked_list.h
